--- a/src/kafka/ATS.Messaging.Kafka.csproj
+++ b/src/kafka/ATS.Messaging.Kafka.csproj
@@ -4,4 +4,10 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Confluent.Kafka" Version="0.11.6" />
+    <PackageReference Include="Confluent.Kafka.Avro" Version="0.11.6" />
+    <PackageReference Include="Confluent.SchemaRegistry" Version="0.11.6" />
+  </ItemGroup>
+
 </Project>
