--- a/src/vault/ATS.Security.Vault.csproj
+++ b/src/vault/ATS.Security.Vault.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="VaultSharp" Version="0.11.0" />
+  </ItemGroup>
+
 </Project>
