--- a/src/kafka/ATS.Messaging.Kafka.csproj
+++ b/src/kafka/ATS.Messaging.Kafka.csproj
@@ -5,9 +5,18 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Confluent.Kafka" Version="0.11.6" />
-    <PackageReference Include="Confluent.Kafka.Avro" Version="0.11.6" />
-    <PackageReference Include="Confluent.SchemaRegistry" Version="0.11.6" />
+    <PackageReference Include="Confluent.Kafka" Version="1.0.0-beta2" />
+    <PackageReference Include="Confluent.Kafka.Avro" Version="1.0.0-beta2" />
+    <PackageReference Include="Confluent.SchemaRegistry" Version="1.0.0-beta2" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="2.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\messaging\ATS.Messaging.Abstractions.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Consumer\" />
   </ItemGroup>
 
 </Project>
