--- a/src/repository/ATS.Persistence.Abstractions.csproj
+++ b/src/repository/ATS.Persistence.Abstractions.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\domain\ATS.Core.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
